# goliath-database

./: .gitignore  README.md  pyproject.toml  requirements.dev.txt  requirements.txt
src/goliathdb/: __init__.py  config.ini  config.py  postgres.py  rds_keyring.py  sql_templates.py
