[build-system]
requires = ["hatchling", "hatch-requirements-txt"]
build-backend = "hatchling.build"

[project]
name = "goliathdb"
version = "0.0.1"
authors = [
  { name="Terrell Vest", email="terrell@terrellvest.com" },
]
description = "A shared database utility for the goliath crypto data project."
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dynamic = ["dependencies"]

[project.urls]
"Homepage" = "https://github.com/TerrellV/goliath-database"
"Bug Tracker" = "https://github.com/TerrellV/goliath-database/issues"

[tool.hatch.metadata.hooks.requirements_txt]
files = ["requirements.txt"]